# kb-brain

./: .gitignore  CONTRIBUTORS.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements-continue.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py
config/: mcp_config.json
continue_integration/: README.md  install_continue.sh
docs/: api.md  configuration.md  continue-extension.md  getting-started.md  gpu_status.md  packaging_plan.md  screen_integration.md  security.md  theme.css  vscode-integration.md
kb_brain/: __init__.py
kb_brain/cli/: continue_cli.py  main.py
kb_brain/config/: settings.py
kb_brain/core/: kb_brain_hybrid.py
kb_brain/integrations/: __init__.py  continue_adapter.py  copilot_integration.py
kb_brain/intelligence/: __init__.py  ai_screen_manager.py  intelligence_system.py  kb_consolidation_system.py  kb_integration_engine.py  knowledge_ingestion.py  processing_orchestrator.py  prompt_classifier.py  sme_agent_system.py  sme_communication_protocol.py
kb_brain/mcp/: server.py
kb_brain/monitoring/: screen_manager.py
kb_brain/performance/: __init__.py  cpu_optimizer.py  jit_similarity.py  performance_integration.py  sparse_optimizer.py
kb_brain/utils/: startup_optimizer.py
scripts/: configure_ssl.py  fix_ssl.sh  install.sh  install_gpu.sh  setup_config.py  setup_mcp.sh  validate_integration_simple.py  validate_performance_integration.py
tests/: test_performance_integration.py
tests/test_intelligence/: __init__.py  test_communication_protocol.py  test_integration_system.py  test_prompt_classifier.py  test_sme_agent_system.py
tests/test_performance/: __init__.py  test_cpu_optimizer.py  test_jit_similarity.py  (+2 more)
