[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-brain"
version = "1.0.0"
description = "Intelligent Knowledge Base Brain with MCP Integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NPS Data Science Team", email = "noreply@nps.gov"},
]
keywords = ["knowledge-base", "ai", "mcp", "gpu", "nlp", "screen-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=12.0.0",
    "cuml-cu12>=24.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.0.0",
]

[project.scripts]
kb-brain = "kb_brain.cli.main:main"
kb-brain-mcp = "kb_brain.mcp.server:main"
kb-brain-monitor = "kb_brain.cli.monitor:main"

[project.urls]
Homepage = "https://github.com/misley/kb-brain"
Documentation = "https://github.com/misley/kb-brain/docs"
Repository = "https://github.com/misley/kb-brain.git"
Issues = "https://github.com/misley/kb-brain/issues"
